CHANGELOG
Version 1.2.2
 - Fix monthly computation for Cellphone
 - Fix Journal Entry Summary
 - Fix Money Transfer Send In/Payout Name
 - Fix Minor Change Rate Problem
 - Fix Loan Register Report Unsort PT
 - Add Foreign Currency
 - Add Pawnticket and OR Number every print 
 - Add New Design for About Us
 - Add Cash In Bank SAP Account in Settings
 - Include Auto Patch up to db1.2 v1.2
 - Include BDO and Smart Money Report in Cash In/Out

Version 1.2
 - Fix Current Rate for Active Loans
 - Fix Change Rate for New Loans only
 - Fix non didn't appear in PT for non-jewel
 - Add Monthly Report - Transaction Count
 - Add Pawner Summary List
 - Add Monthly Computation
 - Add Cash Count Prevention
 - Include Changelog on Menu
 - Patch Up Database

Version 1.1.2.5
 - Fix Report Activate/Deactivate
 - Fix Report PERA PADALA to display PMFTC ME#/MR#
 - Fix Report Termilogy Payout/Send In
 - Modify Daily Time Log Reports

Version 1.1.2.4
 - Add Username on PT
 - Add Item Type on Loan Register - Redeem Report
 - Add Auction Monthly Report
 - Add Monthly Money Transfer Report for BSP
 - Add BSP Report Extract
 - Add Dollar Daily Report
 - FIX Pawning without CUSTOMER error 
 - FIX Triplicate with Pawner name
 - FIX in JE round off
 - FIX Report - Hourly Report
 - FIX Report Size
 - FIX Money Transfer Report Header
 - Package - Include Segregated layout
 - Package - Include InstallPath at Register

Version 1.1.1.2
 - FIX pawning save data.
 - FIX New Loan/Renew Register
 - FIX Redeem Register
 - FIX Monthly Loan Reports
 - FIX Renew JE for more than 1Mon
 - FIX slow Money Transfer saving
 - Added Cash InOut Daily Summary
 - Add PT Claim Sub, Pawner
 - Add OLD PT in PT
 - Include Daily Insurance Report
 - Include Additional Loan Register
 - Include Penalty on Redeem Renew Monthly
 - Include BRGY in PT Address

Version 1.1.1.1
 - Pawnticket Renewal, show old PT#
 - Redemption don't SAVE Interest and Penalty.

Version 1.1.1.0c
 - Enhance pawning computation codes