@@ -9,6 +9,7 @@ Version 1.2.2
  - Add Pawnticket and OR Number every print 
  - Add New Design for About Us
  - Add Cash In Bank SAP Account in Settings
+ - Add Audit Report base from the Memo # <missing>
  - Include Auto Patch up to db1.2 v1.2
  - Include BDO and Smart Money Report in Cash In/Out
 
